[ISSUE 2]  - add refresh token  - add endpoint for logout

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,6 +18,9 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
         <web-resource-collection>
             <web-resource-name>Protected resources</web-resource-name>
             <url-pattern>/top</url-pattern>
+            <url-pattern>/auth/claims</url-pattern>
+            <url-pattern>/auth/logout</url-pattern>
+            <url-pattern>/auth/refresh-tokens</url-pattern>
         </web-resource-collection>
         <auth-constraint>
             <role-name>ROLE_USER</role-name>
