--- a/pom.xml
+++ b/pom.xml
@@ -183,6 +183,11 @@
                   <target>8</target>
               </configuration>
           </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-pmd-plugin</artifactId>
+            <version>3.11.0</version>
+          </plugin>
       </plugins>
   </build>
 </project>
