POM: maven-checkstyle-plugin has been added; CI: checkstyle job has been added to the pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,3 +30,11 @@ pmd:
     paths:
       - target/site/pmd.html
     when: on_failure
+
+checkstyle:
+  stage: analysis
+  only:
+    - dev
+    - master
+  script:
+    - 'mvn $MAVEN_CLI_OPTS clean checkstyle:check'
