POM: findbugs-maven-plugin has been added; CI: findbugs job has been added to the pipeline;

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,6 +40,14 @@ checkstyle:
   script:
     - 'mvn $MAVEN_CLI_OPTS clean checkstyle:check'
 
+findbugs:
+  stage: analysis
+  only:
+    - dev
+    - master
+  script:
+    - 'mvn $MAVEN_CLI_OPTS clean compile findbugs:check'
+
 test:
   stage: test
   only:
