--- a/pom.xml
+++ b/pom.xml
@@ -197,6 +197,15 @@
               <failsOnError>true</failsOnError>
             </configuration>
           </plugin>
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>findbugs-maven-plugin</artifactId>
+            <version>3.0.5</version>
+            <configuration>
+              <effort>Max</effort>
+              <threshold>Low</threshold>
+            </configuration>
+        </plugin>
       </plugins>
   </build>
 </project>
