--- a/pom.xml
+++ b/pom.xml
@@ -118,7 +118,12 @@
             <version>2.7.13</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.2.2</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
