--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,9 @@ stages:
   - package
   - deploy
 
+before_script:
+  - apt-get update -qq && apt-get install -y -qq sshpass
+
 compile:
   stage: compile
   only:
